# Liberty

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-desktop.yml
artifacts/: meeting-minutes-template.html  会议纪要模板.docx  标准录音16_会议纪要.xlsx  标准录音16_会议纪要_已写入.docx  标准录音16_会议纪要_表格版.docx
docs/superpowers/plans/: 2026-03-25-local-funasr-desktop-implementation-plan.md  2026-03-25-meeting-audio-desktop-implementation-plan.md  2026-03-26-online-ai-summary-implementation-plan.md
scripts/: funasr_runner.py  prepare-runtime-bundle.mjs  prepare_runtime_bundle.py  runtime_requirements.txt  runtime_validate.py  runtime_warmup.py  start-dev-server.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: generate_meeting_minutes.rs  generate_meeting_minutes_xlsx.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: runtime-manifest.json
src-tauri/src/: lib.rs  local_ai.rs  local_db.rs  local_export.rs  local_jobs.rs  local_members.rs  local_runtime.rs  main.rs  process_utils.rs  system.rs
src/components/: MeetingNotesPanel.vue  StatusBadge.vue  TranscriptTimeline.vue
src/composables/: useMeetingStore.ts
src/router/: index.ts
src/services/: aiSummary.ts  api.ts  export.ts  i18n.ts  localMeeting.ts  localMembers.ts  localRuntime.ts  mockData.ts  system.ts  transcript.ts  window.ts
src/types/: meeting.ts
src/views/: AiSummaryView.vue  JobDetailView.vue  JobsView.vue  MeetingNotesView.vue  MemberEditorView.vue  MemberManagementView.vue  NewJobView.vue  SettingsView.vue  WorkbenchView.vue
tools/: generate_meeting_doc.py
(+2 files in other folders)
